--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Muhammad Ali - Business Card">
     <meta property="og:type" content="website">
     <meta property="og:image" content="kakashi.jpg">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="businesscardbymuhammadali.netlify.app">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
